# franka

./: CMakeLists.txt  Franka (1).pptx  README.md  package.xml  pick_and_rotate.launch  session_monitor.py
launch/: pick_and_rotate.launch
scripts/: camera_tf_publisher.py  fake_camera.py  franka_picker.py  hsv_tuner_realsense.py  manual_test.py  object_detector.py  pick_and_rotate.py
